Create component panel design added

--- a/student-mark-statement-app/src/app/createPage/create.component.html
+++ b/student-mark-statement-app/src/app/createPage/create.component.html
@@ -1,3 +1,56 @@
-<div>
-    Create component calling
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h3>Mark statement insertion</h3>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-sm-6 form-group">
+                <label>Name </label>
+                <input type="text" class="form-control" [(ngModel)]="sName" />
+            </div>
+            <div class="col-sm-6 form-group">
+                <label>Roll number </label>
+                <input type="text" class="form-control" [(ngModel)]="sName" />
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-sm-6 form-group">
+                <label>HTML </label>
+                <input type="text" class="form-control" [(ngModel)]="sName" />
+            </div>
+            <div class="col-sm-6 form-group">
+                <label>CSS</label>
+                <input type="text" class="form-control" [(ngModel)]="sName" />
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-sm-6 form-group">
+                <label>Javascript</label>
+                <input type="text" class="form-control" [(ngModel)]="sName" />
+            </div>
+            <div class="col-sm-6 form-group">
+                <label>Angular</label>
+                <input type="text" class="form-control" [(ngModel)]="sName" />
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-sm-6 form-group">
+                <label>Total score</label>
+                <input type="text" class="form-control" [(ngModel)]="sName" disabled />
+            </div>
+            <div class="col-sm-6 form-group">
+                <label>Average</label>
+                <input type="text" class="form-control" [(ngModel)]="sName" disabled />
+            </div>
+
+        </div>
+
+    </div>
+    <div class="panel-footer">
+        <button class="btn btn-primary">Save</button>
+    </div>
+
 </div>
