--- a/student-mark-statement-app/src/app/app.component.html
+++ b/student-mark-statement-app/src/app/app.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Nadar School</a>
+      <a class="navbar-brand" href="#">TCS</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#">Home</a></li>
-      <li><a routerLink="/create" routerLinkActive="active">Create</a></li>
-      <li><a routerLink="/show-all" routerLinkActive="active">Show-all</a></li>
+      <li routerLinkActive="active"><a routerLink="/create" >Create</a></li>
+      <li routerLinkActive="active"><a routerLink="/show-all" >Show-all</a></li>
       <li><a href="#">Page 3</a></li>
     </ul>
   </div>
