--- a/student-mark-statement-app/src/app/createPage/create.component.html
+++ b/student-mark-statement-app/src/app/createPage/create.component.html
@@ -9,7 +9,7 @@
                 <input type="text" class="form-control" [(ngModel)]="profile.name" />
             </div>
             <div class="col-sm-6 form-group">
-                <label>Current company name  </label>
+                <label>Current company name </label>
                 <input type="text" class="form-control" [(ngModel)]="profile.company" />
             </div>
 
@@ -21,18 +21,18 @@
             </div>
             <div class="col-sm-6 form-group">
                 <label>CSS</label>
-                <input type="number" class="form-control" [(ngModel)]="profile.cssScore" (change)="autoUpdateScore()"/>
+                <input type="number" class="form-control" [(ngModel)]="profile.cssScore" (change)="autoUpdateScore()" />
             </div>
 
         </div>
         <div class="row">
             <div class="col-sm-6 form-group">
                 <label>Javascript</label>
-                <input type="number" class="form-control" [(ngModel)]="profile.javascriptScore" (change)="autoUpdateScore()"/>
+                <input type="number" class="form-control" [(ngModel)]="profile.javascriptScore" (change)="autoUpdateScore()" />
             </div>
             <div class="col-sm-6 form-group">
                 <label>Angular</label>
-                <input type="number" class="form-control" [(ngModel)]="profile.angularScore" (change)="autoUpdateScore()"/>
+                <input type="number" class="form-control" [(ngModel)]="profile.angularScore" (change)="autoUpdateScore()" />
             </div>
 
         </div>
@@ -50,7 +50,9 @@
 
     </div>
     <div class="panel-footer">
-        <button class="btn btn-primary" (click)="saveFile()" >Save</button>
+        <button class="btn btn-primary" (click)="saveFile()">Save</button>
+        <button class="btn btn-info" (click)="getFile()">GET</button>
     </div>
+
 
 </div>
