dynamic routing issue fixed

--- a/student-mark-statement-app/src/app/app.component.html
+++ b/student-mark-statement-app/src/app/app.component.html
@@ -6,8 +6,8 @@
     <ul class="nav navbar-nav">
       <li><a href="#">Home</a></li>
       <li routerLinkActive="active"><a routerLink="/create" >Create</a></li>
-      <li routerLinkActive="active"><a routerLink="/show-all" >Show-all</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li routerLinkActive="active"><a (click)="list1()" >Show-all</a></li>
+      <li routerLinkActive="active"><a (click)="list2()" >Page 3</a></li>
     </ul>
   </div>
 </nav>
